Bundle and load font

--- a/org.lamport.tla.toolbox/build.properties
+++ b/org.lamport.tla.toolbox/build.properties
@@ -6,6 +6,7 @@ bin.includes = plugin.xml,\
                icons/,\
                StandardModules/,\
                helpContexts.xml,\
-               images/
+               images/,\
+               fonts/
 jars.compile.order = .,\
                      StandardModules/
